add pictograms basic endpoints
